<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#150D0B"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="167dp"
        android:layout_height="167dp"
        android:layout_marginTop="136dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WorldCinema"
        android:textAlignment="center"
        android:textColor="#A52B2B"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="364dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/obvodka"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="#A8A8A8"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="364dp"
        android:layout_height="49dp"
        android:background="@drawable/obvodka"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textColorHint="#A8A8A8"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butt1"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonrec"
        android:text="@string/vhod"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butt2"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonrec2"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="#2B70A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt1" />

</androidx.constraintlayout.widget.ConstraintLayout>